corregida dependencia circular, al crearse un cliente se crean dos cuentas, en ARS y en USD