@@ -1,7 +1,11 @@
 package com.bbva.minibank.infrastructure.mappers;
 
 import com.bbva.minibank.domain.models.Account;
+import com.bbva.minibank.domain.models.Client;
 import com.bbva.minibank.infrastructure.entities.AccountEntity;
+import com.bbva.minibank.infrastructure.entities.TransactionEntity;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.stream.Collectors;
 import org.springframework.stereotype.Component;
 
@@ -9,50 +13,15 @@ import org.springframework.stereotype.Component;
 public class AccountEntityMapper {
 
 
-  public AccountEntity mapToEntity(Account account, ClientEntityMapper clientEntityMapper, TransactionEntityMapper transactionEntityMapper) {
-    AccountEntity accountEntity = new AccountEntity();
-    accountEntity.setAccountNumber(account.getAccountNumber());
-    accountEntity.setBalance(account.getBalance());
-    accountEntity.setCurrency(account.getCurrency());
-    accountEntity.setHolders
-        (account.getHolders()
-            .stream()
-            .map(clientEntityMapper::domainToEntity)
-            .collect(Collectors.toList()));
-    if(account.getTransactions().isEmpty()) {
-      accountEntity.setTransactions(null);
-    } else {
-      accountEntity.setTransactions
-          (account.getTransactions()
-              .stream()
-              .map(transactionEntityMapper::toEntity)
-              .collect(Collectors.toList()));
-    }
-
-    return null;
-  }
-
-  public Account mapToDomain(AccountEntity accountEntity,
-      ClientEntityMapper clientEntityMapper, TransactionEntityMapper transactionEntityMapper) {
-    Account account = new Account();
-    account.setAccountNumber(accountEntity.getAccountNumber());
-    account.setBalance(accountEntity.getBalance());
-    account.setCurrency(accountEntity.getCurrency());
-    account.setHolders
-        (accountEntity.getHolders()
-            .stream()
-            .map(clientEntityMapper::entityToDomain)
-            .collect(Collectors.toList()));
-    if(accountEntity.getTransactions() == null) {
-      account.setTransactions(null);
-    } else {
-      account.setTransactions
-          (accountEntity.getTransactions()
-              .stream()
-              .map(transactionEntityMapper::toDomain)
-              .collect(Collectors.toList()));
-    }
-
-    return account;
+  public List<AccountEntity> domainToEntity(Client client) {
+    List<Account> accounts = client.getAccounts();
+    return accounts.stream()
+        .map(account -> AccountEntity.builder()
+            .accountNumber(account.getAccountNumber())
+            .balance(account.getBalance())
+            .currency(account.getCurrency())
+            .transactions(new ArrayList<TransactionEntity>())
+            .build())
+        .toList();
   }
 }
